spacing fix

--- a/styles.css
+++ b/styles.css
@@ -100,21 +100,21 @@
     width: 75px;
   }
 
-  .links:hover > a .shape-wrapper {
+  .links:hover .shape-wrapper {
     opacity: 1;
   }
 
-  .links:hover > a .shape-wrapper .shape {
+  .links:hover .shape-wrapper .shape {
     animation: jelly infinite;
   }
 
-  .links:hover > a .shape-wrapper .cyan-fill {
+  .links:hover .shape-wrapper .cyan-fill {
     transform: scale(3,.1);
     animation-delay: 0.05s;
     animation-duration: .4s;
   }
 
-  .links:hover > a .shape-wrapper .red-fill {
+  .links:hover .shape-wrapper .red-fill {
     animation-duration: .45s;
     animation-delay: 0.08s;
   }
@@ -134,13 +134,18 @@
   .shape-wrapper {
     opacity: 0;
     position: relative;
-    top: 20px
+  }
+
+  .shape-wrapper .red-fill {
+    mix-blend-mode: screen;
+    position: relative;
+    top: 15px;
   }
 
   .shape-wrapper .cyan-fill {
     mix-blend-mode: screen;
     position: relative;
-    top: -30px;
+    top: -15px;
   }
 
   .pos0 {
